fix: menu color in stuck mode

--- a/src/components/navigation/z-app-header/styles.css
+++ b/src/components/navigation/z-app-header/styles.css
@@ -61,15 +61,22 @@
 :host(:not(:empty)) {
   flex-shrink: 0;
   flex-grow: 0;
-  height: var(--app-header-height);
   padding-top: calc(var(--space-unit) * 3.5);
   padding-bottom: calc(var(--space-unit) * 4.5);
+}
+
+:host(:not(:empty):not([stuck])) {
+  height: var(--app-header-height);
 }
 
 :host([stuck]:not(:empty)) {
   padding-top: var(--space-unit);
   padding-bottom: var(--space-unit);
   box-shadow: var(--shadow-2);
+}
+
+:host([stuck]) .hero-container {
+  display: none;
 }
 
 ::slotted(*) {
@@ -260,6 +267,10 @@
   z-index: 0;
   width: 100%;
   height: 100%;
+}
+
+:host([overlay]:not([stuck]):not([drawer])) {
+  color: #fff;
 }
 
 :host([overlay]) .hero-container::after {
